<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:title="My Profile" />
        <item
            android:id="@+id/nav_notifications"
            android:title="Notifications" />
        <item
            android:id="@+id/nav_scan"
            android:title="Scan" />
        <item
            android:id="@+id/nav_search_books"
            android:title="Search Books" />
        <item
            android:id="@+id/nav_my_books"
            android:title="My Books" />
        <item
            android:id="@+id/nav_my_borrowing"
            android:title="Borrowing" />
        <item
            android:id="@+id/nav_requests"
            android:title="Requests" />
        <item
            android:id="@+id/nav_logout"
            android:title="Logout" />

    </group>

</menu>
